knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Funnel_Snapshot__c/Funnel_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Funnel Snapshot</label>
    <nameField>
        <label>Funnel Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funnel Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>