knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Funnel_Snapshot__c/fields/Account_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Site Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funnel Snapshots</relationshipLabel>
    <relationshipName>Funnel_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>