knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Funnel_Snapshot__c/fields/DHC_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_ID__c</fullName>
    <label>DHC ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>