knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Funnel_Snapshot__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>