knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Funnel_Snapshot__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Opportunity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>